--- a/short_term/views/page/templates/priceChar.html
+++ b/short_term/views/page/templates/priceChar.html
@@ -245,7 +245,7 @@
                         <div class="col-6">
                             <div class="card">
                                 <div class="card-body">
-                                    <h4 class="header-title">{{ defaultCity }} - 开盘时间于城市价格</h4>
+                                    <h4 class="header-title">{{ defaultCity }} - 开盘时间与城市价格</h4>
                                     <div id="mainTwo" style="width: 100%;height:450px">
 
                                     </div>
@@ -279,7 +279,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="text-sm-right d-none d-sm-block">
-                            Copyright &copy; 2024<a target="_blank" href="#">链家网房屋数据分析预测系统</a>
+                            Copyright &copy; 2025<a target="_blank" href="#">链家网房屋数据分析预测系统</a>
                         </div>
                     </div>
                 </div>
@@ -721,7 +721,7 @@
         ],
         series: [
             {
-                name: '价格区间个数',
+                name: '开盘时间平均价格',
                 type: 'line',
                 smooth: true,
                 lineStyle: {
