--- a/short_term/views/page/templates/priceChar.html
+++ b/short_term/views/page/templates/priceChar.html
@@ -262,6 +262,30 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-6">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h4 class="header-title">平均价格前十五的城市</h4>
+                                    <div id="mainFour" style="width: 100%;height:450px">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-6">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h4 class="header-title">城市房价分布对比</h4>
+                                    <div id="mainFive" style="width: 100%;height:450px">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
                     </div> <!-- end row -->
 
                 </div>
@@ -810,6 +834,109 @@
     option && myChart.setOption(option);
 
 </script>
+
+
+<script>
+    var chartDom = document.getElementById('mainFour');
+    var myChart = echarts.init(chartDom);
+    var option;
+
+    option = {
+        title: {
+            text: '平均价格前十五的城市',
+            left: 'center'
+        },
+        tooltip: {
+            trigger: 'axis',
+            axisPointer: {
+                type: 'shadow'
+            }
+        },
+        xAxis: {
+            type: 'value',
+            name: '平均价格'
+        },
+        yAxis: {
+            type: 'category',
+            data: {{ topCities|tojson }},
+            name: '城市',
+            inverse: true
+        },
+        series: [
+            {
+                type: 'bar',
+                data: {{ avgPrices|tojson }},
+                itemStyle: {
+                    color: "#a8dadc",
+                },
+                label: {
+                    show: true,
+                    position: 'right'
+                }
+            }
+        ],
+        animationEasing: 'elasticOut',
+        animationDurationUpdate: 2000
+    };
+
+    option && myChart.setOption(option);
+</script>
+
+<script>
+    // 初始化图表
+    var chartDom = document.getElementById('mainFive');
+    var myChart = echarts.init(chartDom);
+
+    // 配置项
+    var option = {
+        title: {
+            text: '城市房价分布对比',
+            left: 'center'
+        },
+        tooltip: {
+            trigger: 'item',
+            formatter: function(params) {
+                return `${params.name}<br/>
+                        最小值: ${params.data[0]}<br/>
+                        下四分位: ${params.data[1]}<br/>
+                        中位数: ${params.data[2]}<br/>
+                        上四分位: ${params.data[3]}<br/>
+                        最大值: ${params.data[4]}`;
+            }
+        },
+        xAxis: {
+            type: 'category',
+            data: {{ chart_data.cities | tojson }},
+            axisLabel: { rotate: 45 }
+        },
+        yAxis: {
+            type: 'value',
+            name: '价格 (元/㎡)',
+            scale: true
+        },
+        series: [{
+            name: '房价分布',
+            type: 'boxplot',
+            data: {{ chart_data.box_data | tojson }},
+            itemStyle: {
+                color: "#4A90E2",
+            },
+        }]
+    };
+
+    // 应用配置
+    myChart.setOption(option);
+
+    // 响应窗口变化
+    window.addEventListener('resize', function() {
+        myChart.resize();
+    });
+</script>
+
+
+
+
+
 <script src="/static/js/jquery.min.js"></script>
 <script src="/static/js/bootstrap.bundle.min.js"></script>
 <script src="/static/js/metisMenu.min.js"></script>
