在户型图中Y轴的上下位置写反了，更正

--- a/short_term/views/page/templates/companyCloud.html
+++ b/short_term/views/page/templates/companyCloud.html
@@ -856,7 +856,7 @@
             },
             yAxis: {
                 type: 'category',
-                data: ['3室2厅', '3室1厅', '2室2厅', '2室1厅', '1室1厅']
+                data: ['1室1厅' ,'2室1厅',  '2室2厅', '3室1厅','3室2厅'],
             },
             visualMap: {
                 min: 0,
