修改了一些页面小问题

--- a/short_term/views/page/templates/addHourse.html
+++ b/short_term/views/page/templates/addHourse.html
@@ -138,7 +138,7 @@
                     <li>
                         <a href="/page/anthorChar" class="waves-effect">
                             <div class="d-inline-block icons-sm mr-1"><i class="uim uim-layer-group"></i></div>
-                            <span>房屋其他分析</span>
+                            <span>房屋状态分析</span>
                         </a>
                     </li>
                     <li class="menu-title">特征分析</li>
@@ -319,7 +319,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="text-sm-right d-none d-sm-block">
-                            Copyright &copy; 2024<a target="_blank" href="#">链家网房屋数据分析预测系统</a>
+                            Copyright &copy; 2025<a target="_blank" href="#">链家网房屋数据分析预测系统</a>
                         </div>
                     </div>
                 </div>
