--- a/short_term/views/page/templates/companyCloud.html
+++ b/short_term/views/page/templates/companyCloud.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>公司词云图</title>
+        <title>成交量特征分析</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta content="Premium Multipurpose Admin & Dashboard Template" name="description">
         <meta content="Themesdesign" name="author">
@@ -189,10 +189,10 @@
                             <li>
                                 <a href="/page/anthorChar" class="waves-effect">
                                     <div class="d-inline-block icons-sm mr-1"><i class="uim uim-layer-group"></i></div>
-                                    <span>房屋其他分析</span>
+                                    <span>房屋状态分析</span>
                                 </a>
                             </li>
-                            <li class="menu-title">成交量特征分析</li>
+                            <li class="menu-title">特征分析</li>
                             <li>
                                 <a href="/page/companyCloud" class="waves-effect">
                                     <div class="d-inline-block icons-sm mr-1"><i class="uim uim-object-ungroup"></i></div>
@@ -299,7 +299,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="text-sm-right d-none d-sm-block">
-                                    Copyright &copy; 2024<a target="_blank" href="#">链家网房屋数据分析预测系统</a>
+                                    Copyright &copy; 2025<a target="_blank" href="#">链家网房屋数据分析预测系统</a>
                                 </div>
                             </div>
                         </div>
