--- a/short_term/views/page/templates/priceChar.html
+++ b/short_term/views/page/templates/priceChar.html
@@ -138,7 +138,7 @@
                     <li>
                         <a href="/page/anthorChar" class="waves-effect">
                             <div class="d-inline-block icons-sm mr-1"><i class="uim uim-layer-group"></i></div>
-                            <span>房屋其他分析</span>
+                            <span>房屋状态分析</span>
                         </a>
                     </li>
                     <li class="menu-title">特征分析</li>
