董斌关于扇形图和折线图bug的修改

--- a/short_term/views/page/templates/detailChar.html
+++ b/short_term/views/page/templates/detailChar.html
@@ -614,7 +614,7 @@
                             borderColor: 'rgba(255,255,255,.5)'
                           },
                           label: {
-                            show: false
+                            show: true
                           }
                         }
                       ]
